--- a/GestorTeocratico/Components/Account/Pages/_Imports.razor
+++ b/GestorTeocratico/Components/Account/Pages/_Imports.razor
@@ -1,3 +1,4 @@
 ﻿@using GestorTeocratico.Components.Account.Shared
+@layout Layout.IndexLayout
 @attribute [ExcludeFromInteractiveRouting]
 @attribute [Microsoft.AspNetCore.Authorization.AllowAnonymous]
