--- a/GestorTeocratico/Components/Layout/MainLayout.razor
+++ b/GestorTeocratico/Components/Layout/MainLayout.razor
@@ -17,6 +17,18 @@
             <RadzenColumn Size="7">
                 <RadzenStack AlignItems="AlignItems.Center" Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End" Gap="0.5rem" class="rz-px-2">
                     <RadzenAppearanceToggle />
+                    <RadzenProfileMenu>
+                        <Template>
+                            <RadzenGravatar Email="user@example.com" />
+                        </Template>
+                        <ChildContent>
+                            <RadzenProfileMenuItem Text="Inicio Sesión" Path="/Account/Login" Icon="account_circle"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text="Registrarse" Path="/Account/Register" Icon="line_weight"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text="FileInput" Path="fileinput" Icon="attach_file"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text="Notification" Path="notification" Icon="announcement"></RadzenProfileMenuItem>
+                        </ChildContent>
+                    </RadzenProfileMenu>
                 </RadzenStack>
             </RadzenColumn>
         </RadzenRow>
