--- a/GestorTeocratico/Components/Layout/NavMenu.razor
+++ b/GestorTeocratico/Components/Layout/NavMenu.razor
@@ -5,7 +5,7 @@
 <AuthorizeView>
     <Authorized>
         <RadzenPanelMenu>
-            <RadzenPanelMenuItem Text="Inicio" Path="" Icon="home" />
+            <RadzenPanelMenuItem Text="Inicio" Path="/dashboard" Icon="home" />
             <RadzenPanelMenuItem Text="Congregación" Path="/congregations" Icon="fort" />
             <RadzenPanelMenuItem Text="Departamentos" Path="/departments" Icon="business" />
             <RadzenPanelMenuItem Text="Responsabilidades" Path="/responsibilities" Icon="assignment" />
