Remove sidebar expansion logic from IndexLayout and update Index to exclude from interactive routing

--- a/GestorTeocratico/Components/Pages/Index.razor
+++ b/GestorTeocratico/Components/Pages/Index.razor
@@ -1,7 +1,8 @@
 @page "/"
 @layout Layout.IndexLayout
-
+@attribute [ExcludeFromInteractiveRouting]
 @attribute [Microsoft.AspNetCore.Authorization.AllowAnonymous]
+
 <RadzenStack Gap="2rem">
 
     <!-- Hero / Masthead -->
