--- a/GestorTeocratico/Components/Layout/IndexLayout.razor
+++ b/GestorTeocratico/Components/Layout/IndexLayout.razor
@@ -5,7 +5,7 @@
 <RadzenLayout style="grid-template-areas: 'rz-sidebar rz-header' 'rz-sidebar rz-body';">
     <RadzenHeader>
     </RadzenHeader>
-    <RadzenBody Expanded="@sidebarExpanded">
+    <RadzenBody>
         <RadzenRow class="rz-mx-auto rz-px-4 rz-pt-2 rz-pt-md-4 rz-pt-lg-6 rz-pt-xl-12 rz-pb-2 rz-pb-lg-12"
                    Style="max-width: 1440px;">
             <RadzenColumn Size="12">
@@ -16,17 +16,4 @@
 </RadzenLayout>
 
 @code {
-    bool sidebarExpanded = false;
-
-    protected override void OnInitialized()
-    {
-        base.OnInitialized();
-        sidebarExpanded = true; // Set the initial state of the sidebar to expanded
-    }
-
-    void SidebarToggleClick()
-    {
-        sidebarExpanded = !sidebarExpanded;
-    }
-
 }
