Refactor role management: replace hardcoded role names with constants in DataSeeder and DataSeederDevelopment, update NavMenu and MainLayout for improved user experience, and enhance authorization checks.

--- a/GestorTeocratico/Components/Layout/MainLayout.razor
+++ b/GestorTeocratico/Components/Layout/MainLayout.razor
@@ -22,11 +22,11 @@
                             <RadzenGravatar Email="user@example.com" />
                         </Template>
                         <ChildContent>
-                            <RadzenProfileMenuItem Text="Inicio Sesión" Path="/Account/Login" Icon="account_circle"></RadzenProfileMenuItem>
-                            <RadzenProfileMenuItem Text="Registrarse" Path="/Account/Register" Icon="line_weight"></RadzenProfileMenuItem>
-                            <RadzenProfileMenuItem Text="FileInput" Path="fileinput" Icon="attach_file"></RadzenProfileMenuItem>
-                            <RadzenProfileMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenProfileMenuItem>
-                            <RadzenProfileMenuItem Text="Notification" Path="notification" Icon="announcement"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text="Mi Cuenta" Path="/Account/Manage" Icon="account_circle"></RadzenProfileMenuItem>
+                            @* <RadzenProfileMenuItem Text="Registrarse" Path="/Account/Register" Icon="line_weight"></RadzenProfileMenuItem> *@
+                            @* <RadzenProfileMenuItem Text="FileInput" Path="fileinput" Icon="attach_file"></RadzenProfileMenuItem> *@
+                            @* <RadzenProfileMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenProfileMenuItem> *@
+                            @* <RadzenProfileMenuItem Text="Notification" Path="notification" Icon="announcement"></RadzenProfileMenuItem> *@
                         </ChildContent>
                     </RadzenProfileMenu>
                 </RadzenStack>
