--- a/GestorTeocratico/Components/Account/Pages/Login.razor
+++ b/GestorTeocratico/Components/Account/Pages/Login.razor
@@ -26,7 +26,7 @@
             } *@
         <ValidationSummary class="account-msg-error" role="alert"/>
         <div>
-            <InputText @bind-Value="Input.Email" id="Input.Email" class="account-input" autocomplete="username"
+            <InputText @bind-Value="Input.Email" id="Input.Email" class="account-input" autocomplete="off"
                        aria-required="true" placeholder="name@example.com"/>
             <ValidationMessage For="() => Input.Email" class="account-msg-error"/>
         </div>
